--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ thiserror = "1.0"
 tokio = { version = "1.10", features = ["full"] }
 
 # TODO: write cli tool example
-[[example]]
-name = "neocities-cli"
+#[[example]]
+#name = "neocities-cli"
