--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "A simple Neocities API library"
 version = "0.9.0"
 edition = "2018"
 license = "MIT"
+documentation = "https://docs.rs/neocities/"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "multipart"] }
