--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "neocities"
 description = "A simple Neocities API library"
-version = "0.9.1"
+version = "1.0.0"
 edition = "2018"
 license = "MIT"
 documentation = "https://docs.rs/neocities/"
@@ -12,9 +12,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 
+# For the example CLI tool
 [dev-dependencies]
 tokio = { version = "1.10", features = ["full"] }
+clap = "3.0.0-beta.4"
+walkdir = "2.3"
 
-# TODO: write cli tool example
-#[[example]]
-#name = "neocities-cli"
+[[example]]
+name = "neocities-cli"
