--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ thiserror = "1.0"
 # For the example CLI tool
 [dev-dependencies]
 tokio = { version = "1.10", features = ["full"] }
-clap = "3"
+clap = { version = "3.1", features = ["derive", "env"] }
 walkdir = "2.3"
 
 [[example]]
